syntax = "proto3";

package coordapi;

option go_package = "github.com/edgelesssys/coco/internal/coordapi";

service CoordAPI {
  rpc SetManifest(SetManifestRequest) returns (SetManifestResponse);
}

message SetManifestRequest {
  string Manifest = 1;
}

message SetManifestResponse {
  repeated bytes CertChain = 1;
}
